<resources>
    <string name="app_name">YourStoryDice</string>
    <string name="app_title">The best story dice game!</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Navbar -->
    <string name="nav_add">Add</string>
    <string name="nav_add_image">Add Image</string>
    <string name="nav_gallery">Gallery</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_info">Info</string>
    <string name="nav_information">Information</string>

    <!-- Info -->
    <string name="info">Fork me on GitHub</string>

    <!-- Settings -->
    <string name="no_settings">There are not settings yet</string>

    <!-- New Die -->
    <string name="save">Save</string>
    <string name="license">This image will be licensed under CC0 1.0 when saving it.</string>
    <string name="error_empty_bitmap">This image seems to be empty. Please draw a picture first.</string>
    <string name="error_save_permissions">You have no permissions to save the image, please enable them</string>
    <string name="error_save_fails">Your image couldn\'t be saved, please check that your external storage is mounted</string>
    <string name="successfully_saved">Your image was successfully saved in:</string>

    <!-- Gallery list -->
    <string name="gallery_all">All images</string>
    <string name="gallery_default">Application images</string>
    <string name="gallery_custom">Custom images</string>
</resources>
