<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:id="@+id/actions"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_add_die"
            android:icon="@android:drawable/ic_menu_add"
            android:title="@string/nav_add_image"
            android:titleCondensed="@string/nav_add" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@android:drawable/ic_menu_gallery"
            android:title="@string/nav_gallery" />
    </group>

    <group android:id="@+id/information"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_settings"
            android:icon="@android:drawable/ic_menu_preferences"
            android:title="@string/nav_settings" />
        <item
            android:id="@+id/nav_information"
            android:icon="@android:drawable/ic_menu_info_details"
            android:title="@string/nav_information"
            android:titleCondensed="@string/nav_info" />
    </group>
</menu>
